fix: wrap article date in time tag, secondary button border

--- a/src/components/StructuredContent/components/Breadcrumbs/Breadcrumbs.module.scss
+++ b/src/components/StructuredContent/components/Breadcrumbs/Breadcrumbs.module.scss
@@ -13,7 +13,7 @@
 }
 
 .btn {
-  display: grid;
+  display: inline-grid;
   grid-auto-flow: column;
   column-gap: 8px;
   align-items: center;
