--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -805,7 +805,7 @@ $btn-padding-y-lg: $input-btn-padding-y-lg !default;
 $btn-padding-x-lg: $input-btn-padding-x-lg !default;
 $btn-font-size-lg: $input-btn-font-size-lg !default;
 
-$btn-border-width: 1.5px;
+$btn-border-width: 1px;
 
 $btn-font-weight: $font-weight-semi-bold;
 $btn-box-shadow: inset 0 1px 0 rgba($white, 0.15), 0 1px 1px rgba($black, 0.075) !default;
